# Coworkings_BE

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
coworkings_be/: manage.py
coworkings_be/coworking/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
coworkings_be/coworking/migrations/: 0001_initial.py
coworkings_be/coworking/tests/: factory.py  test_api.py
coworkings_be/coworkings_be/: asgi.py  settings.py  swagger_schema_view.py  urls.py  wsgi.py
coworkings_be/images/: models.py
coworkings_be/images/migrations/: 0001_initial.py
coworkings_be/reservation/: admin.py  models.py  serializers.py  urls.py  views.py
coworkings_be/reservation/migrations/: 0001_initial.py  0002_remove_reservation_end_time_and_more.py  0002_remove_reservation_end_time_and_more_squashed_0005_remove_reservation_end_time_and_more.py  0002_remove_reservation_end_time_and_more_squashed_0005_remove_reservation_end_time_and_more_squashed_0006_alter_reservation_datetime_range.py  0003_reservation_paid.py  0004_remove_reservation_total_price_reservation_end_time_and_more.py  0005_remove_reservation_end_time_and_more.py
coworkings_be/reservation/tests/: factory.py  test_api.py
coworkings_be/users/: admin.py  models.py  serializers.py  urls.py  user_roles.py  views.py
coworkings_be/users/migrations/: 0001_0001_initial.py  0001_initial.py  (+2 more)
coworkings_be/utils/: fields.py  mixins.py  models.py  permissions.py  validators.py
coworkings_be/working_spaces/: admin.py  models.py  serializers.py  urls.py  views.py
(+5 files in other folders)
